# database-tasks

./: .env.local  .gitignore  Orders.md  README.md  docker-compose.local.yml  load-demo-data.sh  pyproject.toml
.github/workflows/: postgres-service.yml
init/: init-db.sh  init.sql
init/sql/: init.sql
tests/: config.py  conftest.py  test_database.py
