[tool.poetry]
name = "database-tasks"
version = "0.1.0"
description = "Tests for dbms tasks"
authors = ["UlianaDegtiareva <uvdegtiareva@edu.hse.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "database_tasks"}]
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
pydantic-settings = ">=2.8.1,<3.0.0"
pytest = ">=8.3.5,<9.0.0"
sqlalchemy = ">=2.0.39,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
